grammar.js
    query: ($) => optional($.statement_list),
    statement_list: ($) =>
      seq(seperatedList1(repeat1(";"), $.statement), repeat(";")),

    statement: ($) =>
      choice(
        $.let_statement,
        $.select_statement,
        $.begin_statement,
        $.commit_statement,
        $.cancel_statement,
        $.break_statement,
        $.continue_statement,
        $.create_statement,
        $.update_statement,
        $.define_statement,
        $.alter_statement,
        $.return_statement,
        $.info_statement,
        $.use_statement,
        $.for_statement,
        $.expression,
      ),

    let_statement: ($) =>
      prec(
        PRECEDENCE.LET,
        seq(optional(kw("LET")), $.param, "=", $.expression),
      ),

    select_statement: ($) =>
      seq(
        kw("SELECT"),
        field("selector", $.selector),
        optional(seq(kw("OMIT"), field("omit", seperatedList1(",", $.idiom)))),
        kw("FROM"),
        optional(kw("ONLY")),
        $.expression_list,
        optional(seq(kw("WHERE"), $.expression)),
        optional(seq(kw("VERSION"), $.datetime_strand)),
        optional(seq(kw("TIMEOUT"), $.duration)),
        optional(kw("PARALLEL")),
        optional(kw("TEMPFILES")),
        optional(seq(kw("EXPLAIN"), optional(kw("FULL")))),
      ),

    selector: ($) =>
      choice(
        seq(kw("VALUE"), $.expression, optional(seq(kw("AS"), $.idiom))),
        seperatedList1(
          ",",
          choice("*", seq($.expression, optional(seq(kw("AS"), $.idiom)))),
        ),
      ),

    alter_statement: ($) =>
      seq(
        kw("ALTER"),
        $._table_kw,
        optional(seq(kw("IF"), kw("EXISTS"))),
        $.identifier,
        repeat($.alter_statement_clauses),
      ),
    alter_statement_clauses: ($) =>
      choice(
        seq(kw("DROP"), optional($.boolean)),
        kw("SCHEMALESS"),
        kw("SCHEMAFULL"),
        kw("SCHEMAFUL"),
        $._comment_clause,
        $._type_clause,
        $._changefeed_clause,
      ),

    return_statement: ($) => seq(kw("RETURN"), $._expression_and_statements),

    use_statement: ($) =>
      seq(
        kw("USE"),
        choice(
          seq(
            choice(kw("NAMESPACE"), kw("NS")),
            $.identifier,
            optional(seq(choice(kw("DATABASE"), kw("DB")), $.identifier)),
          ),
          seq(choice(kw("DATABASE"), kw("DB")), $.identifier),
        ),
      ),

    _table_kw: ($) => choice(kw("TABLE"), kw("TB")),

    _comment_clause: ($) =>
      seq(kw("COMMENT"), choice(kw("NONE"), $.plain_strand)),
    _type_clause: ($) =>
      seq(kw("TYPE"), choice(kw("NORMAL"), kw("RELATION"), kw("ANY"))),
    _changefeed_clause: ($) =>
      seq(kw("CHANGEFEED"), choice(kw("NONE"), $._changefeed_clause_tail)),
    kind: ($) =>
      prec.left(
        choice(
          likeKw("ANY"),
          seq(likeKw("OPTION"), "<", $._concrete_kind, ">"),
          seperatedList1("|", $._concrete_kind),
        ),
      ),

    _concrete_kind: ($) =>
      prec.left(
        choice(
          likeKw("BOOL"),
          likeKw("NULL"),
          likeKw("BYTES"),
          likeKw("DATETIME"),
          likeKw("DECIMAL"),
          likeKw("DURATION"),
          likeKw("FLOAT"),
          likeKw("INT"),
          likeKw("NUMBER"),
          likeKw("OBJECT"),
          likeKw("POINT"),
          likeKw("STRING"),
          likeKw("UUID"),
          likeKw("RANGE"),
          likeKw("FUNCTION"),
          seq(
            likeKw("RECORD"),
            optional(seq("<", seperatedList1("|", $.identifier), ">")),
          ),
          seq(
            likeKw("GEOMETRY"),
            optional(seq("<", seperatedList1("|", $._geometry_kind), ">")),
          ),
          seq(
            likeKw("ARRAY"),
            optional(seq("<", $.kind, optional(seq(",", $.integer)), ">")),
          ),
          seq(
            likeKw("SET"),
            optional(seq("<", $.kind, optional(seq(",", $.integer)), ">")),
          ),
          $.number,
          $.duration,
          $.plain_strand,
          $.literal_object_kind,
          $.literal_array_kind,
        ),
      ),

    expression_list: ($) => seperatedList1(",", $.expression),

    _expression_and_statements: ($) =>
      choice($.select_statement, $.if_statement, $.expression),

    expression: ($) =>
      choice(
        $.unary_expression,
        $.binary_expression,
        $._local_operator,
        prec.left(PRECEDENCE.CLOSURE, $.closure),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          PRECEDENCE.OR,
          seq($.expression, $.or_operator, $.expression),
        ),
        prec.left(
          PRECEDENCE.AND,
          seq($.expression, $.and_operator, $.expression),
        ),
        prec.left(
          PRECEDENCE.RELATION,
          seq($.expression, $.relation_operator, $.expression),
        ),
        prec.left(
          PRECEDENCE.EQUALITY,
          seq($.expression, $.eq_operator, $.expression),
        ),
        prec.left(PRECEDENCE.POWER, seq($.expression, "**", $.expression)),
        prec.left(
          PRECEDENCE.MUL,
          seq($.expression, $.mull_operator, $.expression),
        ),
        prec.left(
          PRECEDENCE.ADD,
          seq($.expression, $.add_operator, $.expression),
        ),
        prec.left(
          PRECEDENCE.RANGE,
          seq($.expression, $.range_operator, $.expression),
        ),
      ),

    _local_operator: ($) =>
      choice(
        prec.left(PRECEDENCE.DOT, seq($.expression, "...")),
        prec.left(PRECEDENCE.DOT, seq($.expression, $.dot_operator)),
        prec.left(PRECEDENCE.DOT, seq($.expression, $.index_operator)),
        prec.left(PRECEDENCE.DOT, seq($.expression, $.graph_operator)),
        prec.left(PRECEDENCE.DOT, seq($.prefix_operator, $.expression)),
        $.object_literal,
        $.array_literal,
        $.number,
        $.boolean,
        $.duration,
        $.null,
        $.none,
        $.strand_like,
        $._path_like,
        $.param,
        $.record_id,
        seq("(", $.covered_expression, ")"),
      ),

    dot_operator: ($) =>
      prec.left(seq(
        ".",
        choice(
          seq($.identifier, $.call_operator),
          $.destructure_operator,
          $.identifier,
          "*",
        ),
      )),

    index_operator: ($) =>
      seq(
        "[",
        choice(
          "*",
          "$",
          seq(choice("?", kw("WHERE")), $.expression),
          $.expression,
        ),
        "]",
      ),

    call_operator: ($) => seq("(", trailingList0(",", $.expression), ")"),

    destructure_operator: ($) =>
      seq("{", trailingList0(",", $.destructure_field), "}"),

    destructure_field: ($) =>
      seq(
        $.identifier,
        optional(
          choice(
            seq(":", $.identifier, repeat($.dot_operator)),
            $.dot_operator,
          ),
        ),
      ),

    range_operator: ($) => choice(">..", "..", "..=", ">..="),
    add_operator: ($) => choice("+", "-"),
    mull_operator: ($) => choice("*", "/", "×", "÷", "%"),
    relation_operator: ($) =>
      choice(
        ...RELATION_OPERATOR,
        ...RELATION_OPERATOR_KEYWORDS.map(kw),
        $.knn_operator,
      ),
    knn_operator: ($) =>
      seq(
        "<|",
        $.integer,
        optional(seq(",", choice($.integer, $.distance))),
        "|>",
      ),

    closure: ($) =>
      seq(
        $._closure_arguments,
        choice(
          prec(PRECEDENCE.CLOSURE_RETURN, seq("->", $.kind, $.block)),
          $.expression,
        ),
      ),
    _closure_arguments: ($) =>
      prec.left(
        seq(
          "|",
          seperatedList0(",", $.argument),
          "|",
          optional(seq("->", $.kind)),
        ),
      ),

    argument: ($) => seq($.param, optional(seq(":", $.kind))),

    distance: ($) => choice(...DISTANCE_KEYWORDS.map(kw)),

    block: ($) =>
      seq(
        "{",
        $._block_body,
        repeat(seq(repeat1(";"), $._block_body)),
        repeat(";"),
        "}",
      ),
    _block_body: ($) =>
      choice(
        $.let_statement,
        $.if_statement,
        $.select_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.create_statement,
        $.update_statement,
        $.return_statement,
        $.expression,
      ),

    boolean: ($) => choice(likeKw("TRUE"), likeKw("FALSE")),
    number: ($) => NUMERIC,
    integer: ($) => INTEGER,

    doc_multi_line_comment: ($) =>
      token(prec(2, seq("/**", field("doc", /[^*]*\*+([^/*][^*]*\*+)*/), "/"))),

    multi_line_comment: ($) =>
      token(prec(1, seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))),

    plain_strand: ($) =>
      choice(
        seq('"', repeat($._strand_content_double), '"'),
        seq("'", repeat($._strand_content_single), "'"),
        seq('s"', repeat($._strand_content_double), '"'),
        seq("s'", repeat($._strand_content_single), "'"),
      ),
    _strand_content_double: ($) => choice(/[^"\\]/, /\\[bfnrt\\'"]/),

    _strand_content_single: ($) => choice(/[^'\\]/, /\\[bfnrt\\'"]/),

    identifier: ($) =>
      choice($.raw_identifier, $.bracket_identifier, $.backtick_identifier),
    raw_identifier: ($) => IDENTIFIER,

    param: ($) => choice($._raw_param, $._bracket_param, $._backtick_param),

    _raw_param: ($) => token(seq("$", token.immediate(IDENTIFIER))),
    _bracket_param: ($) =>
      token(seq("$⟨", token.immediate(/[^⟩]*/), token.immediate("⟩"))),
    _backtick_param: ($) =>
      token(seq("$`", token.immediate(/[^`]*/), token.immediate("`"))),
  },
});
